[gd_scene load_steps=6 format=3 uid="uid://2ubsbgso1mxg"]

[ext_resource type="Script" uid="uid://bb5qovqyva2ym" path="res://scripts/game_main.gd" id="1_p1baw"]
[ext_resource type="Script" uid="uid://dnnaw8engdol3" path="res://scripts/tile_generator.gd" id="2_omk24"]
[ext_resource type="Script" uid="uid://d2rxvbea1sftl" path="res://scripts/drag_handler.gd" id="3_y3nk4"]
[ext_resource type="PackedScene" uid="uid://h0nqmstgihjd" path="res://scenes/core_gameplay/tile_grid.tscn" id="4_omk24"]
[ext_resource type="Script" uid="uid://drncec85efn7a" path="res://scripts/hand_manager.gd" id="5_y3nk4"]

[node name="GameMain" type="Node2D"]
script = ExtResource("1_p1baw")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.25, 0.25)

[node name="TileGenerator" type="Node2D" parent="."]
script = ExtResource("2_omk24")

[node name="DragHandler" type="Node2D" parent="."]
script = ExtResource("3_y3nk4")

[node name="TileGrid" parent="." instance=ExtResource("4_omk24")]
y_sort_enabled = true

[node name="HandManager" type="Node2D" parent="."]
script = ExtResource("5_y3nk4")

[node name="HandTiles" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="TileSorter" type="Node2D" parent="HandTiles"]
y_sort_enabled = true

[connection signal="hand_tile_removed" from="DragHandler" to="." method="_on_drag_handler_hand_tile_removed"]
